project("CTMP")
#set(CMAKE_CXX_COMPILER clang++)
cmake_minimum_required(VERSION 3.16)
add_compile_options(-std=c++17)

add_executable(binary src/binary.cc)
add_executable(describe_type src/describe_type.cc)
add_executable(example src/example.cc)
add_executable(fac src/fac.cc)
add_executable(replace_type src/replace_type.cc)
add_executable(units src/units.cc)
